# PersonalClaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  SHOWCASE.md  package-lock.json  package.json  personalclaw-backend.spec  pyproject.toml  setup.cfg  setup.py
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  full.yml  release.yml
deploy/compose/: compose.build.yaml  compose.dev.yaml  compose.prod.yaml  compose.yaml
deploy/docker/: 10-self-signed-cert.sh  Dockerfile.backend  Dockerfile.web  nginx.conf.template
deploy/website/: README.md
desktop/: .gitignore  context-menu.js  find-bin.js  loading.html  main.js  package-lock.json  package.json  preload.js
desktop/test/: context-menu.test.js  find-bin.test.js  packaging.test.js
docs/: vision.md
docs/architecture/: app-platform.md  chat-sessions.md  inbox-channels.md  knowledge-memory.md  loops.md  overview.md  provider-boundary-keeps.txt  provider-boundary.md  security.md  tasks-triggers.md
docs/brand/: README.md
docs/guides/: containers.md  getting-started.md
docs/reference/: CONFIG-REFERENCE.md  api-overview.md  cli.md  configuration.md
docs/research/learnings/: README.md  agent-harness-engineering.md  automation-and-triggers.md  ecosystem-and-interop.md  knowledge-pipelines.md  local-models-and-inference.md  memory-architectures.md  multi-agent-orchestration.md  planning-and-decomposition.md  product-surfaces-and-ux.md  security-and-guardrails.md  self-improvement-loops.md  skills-and-prompt-craft.md  verification-and-judging.md  workflow-engine-design.md
docs/roadmap/: roadmap.md
docs/roadmap/plans/: ACP-AGENT-PARITY.md  AGENT-PACKS.md  AMBIENT-SURFACES.md  APP-PLATFORM-EVOLUTION.md  AUTONOMY-GUARDRAILS.md  BROWSE-AUTOMATION.md  CHANNEL-EXPANSION.md  CI-RELEASE-ENGINEERING.md  CONTEXT-ECONOMY.md  DESIGN-SYSTEM-CONSISTENCY.md  DESKTOP-CAPABILITIES.md  DISCOVERABILITY-LAUNCH.md  DISTRIBUTION.md  DURABILITY-AND-SYNC.md  ECOSYSTEM-TOOLING.md  EVALUATION-SUBSTRATE.md  EXECUTION-ISOLATION.md  EXECUTION-PROTOCOL.md  EXTERNAL-ACCESS.md  FLUID-MOTION.md  HARNESS-CRAFT.md  INBOX-NOTIFICATIONS-UNIFICATION.md  INTEGRATION-ARCHITECTURE.md  KNOWLEDGE-LIBRARY.md  LEARNING-VISIBILITY.md  LIFECYCLE-DOCTRINE.md  LOCAL-MODEL-MANAGER-V2.md  MCP-READONLY-INBOUND.md  MEMORY-GRAPH-AND-VAULT.md  MOBILE-COMPANION.md  MODEL-ROUTING-TELEMETRY.md  MULTIMODAL-IO.md  ONBOARDING-UX.md  OSS-OPERATIONS.md  PLATFORM-LEGIBILITY.md  PLATFORM-REACH.md  PLATFORM-RESILIENCE.md  PROACTIVE-ASSISTANT.md  PROVIDER-BOUNDARY-COMPLETION.md  PUBLICATION.md  (+15 more)
docs/roadmap/research/: acp-agent-parity-audit.md  multi-tenancy-entity-audit.md  team-shared-harness-research.md
docs/screenshots/: CAPTURE.md  capture.mjs
docs/security/: limitations.md  threat-model.md
scripts/: install_git_hooks.sh  memory_validate.py  render_smoke.mjs  run_prepush.sh  seed_tasks.py  session_validate.py  setup_labels.sh  smoke_unified_loop_classify.py  ut7_validate.py  verify_wheel.py
src/personalclaw/: __init__.py  __main__.py  _sdk_deps.py  _ssl_compat.py  after_turn_review.py  agent.py  agent_metadata.py  app_cli.py  atomic_write.py  autonomous_framing.py  autonudge.py  channel_delivery.py  channel_history.py  cli.py  cli_chat.py  cli_commands.py  cli_config.py  cli_doctor.py  cli_server.py  cli_setup.py  concurrency.py  constants.py  context.py  context_compaction.py  context_engine.py  context_management.py  diarize.py  doc_parser.py  engagement_signals.py  env.py  event_triggers.py  frontend.py  fs_watch.py  gateway.py  gateway_services.py  grill.py  heartbeat.py  history.py  hooks.py  inbox.py  (+56 more)
src/personalclaw/acp/: __init__.py  adapter.py  cli_resolve.py  client.py  connection_pool.py  dialect.py  errors.py  reader.py  session.py  translate.py  transport.py  types.py
src/personalclaw/acp_bundles/: __init__.py  _register.py
src/personalclaw/action_providers/: __init__.py  base.py  bash_provider.py  create_task_provider.py  invoke_agent_provider.py  notify_provider.py  registry.py  run_prompt_provider.py  run_script_provider.py  run_workflow_provider.py  send_message_provider.py  services.py  template.py
src/personalclaw/agents/: __init__.py  defaults.py  marketplace.py  provider.py  registry.py
src/personalclaw/apps/: __init__.py  app_config.py  app_crons.py  app_manager.py  backend_runtime.py  catalog.py  dependency_ledger.py  manager.py  manifest.py  mcp_bridge.py  permissions.py  prompt_registry.py  prompt_seed.py  source.py
src/personalclaw/artifacts/: __init__.py  handlers.py  models.py  native.py  provider.py  registry.py
src/personalclaw/auth/: __init__.py  modes.py  oidc.py
src/personalclaw/channel_transports/: __init__.py  base.py  manager.py  reference_echo.py  webui.py
src/personalclaw/config/: __init__.py  (+3 more)
tests/: README.md  chat_test_helpers.py  conftest.py  debug_sandbox.sh  fakes.py  smoke_gateway.sh  smoke_sandbox.sh  test_acp_agent_event_mapping.py  test_acp_agent_resolution.py  test_acp_bundles.py  test_acp_cli_resolve.py  test_acp_client.py  test_acp_connection_pool.py  test_acp_dialect.py  test_acp_reader.py  test_acp_session.py  test_acp_session_provider.py  test_acp_set_mode_all_agents.py  test_acp_translate.py  test_acp_transport.py  test_acp_turn_scenarios.py  test_acp_types.py  test_action_schema_executor_parity.py  test_active_recall.py  test_after_turn_review.py  test_agent.py  test_agent_defaults.py  test_agent_definition_provider.py  test_agent_event.py  test_agent_metadata.py  test_agent_model_reconcile.py  test_agent_provider.py  test_agent_providers_endpoint.py  test_agent_scoped_hooks.py  test_agent_voice.py  test_api_agent_config_put_succeeds.py  test_api_server.py  test_app_agent_run.py  test_app_api.py  test_app_catalog.py  (+401 more)
web/: DESIGN.md  PRODUCT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/.impeccable/: design.json
web/src/: main.tsx
(+738 files in other folders)
